--- a/src/assets/styles/_base.css
+++ b/src/assets/styles/_base.css
@@ -10,7 +10,7 @@
 /* ===================================================== */
 @font-face {
 	font-family: "UNSCFont";
-	src: url("@/assets/fonts/Conduit.ttf") format("truetype");
+	src: url("src/assets/fonts/Conduit.ttf") format("truetype");
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
